sticky btn z-index fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -2383,7 +2383,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #FFFFFF;
-  z-index: 99;
+  z-index: 1;
 }
 @media (min-width: 1024px) {
   .special-sticky-btn {
